--- a/packages/report-processing/package.json
+++ b/packages/report-processing/package.json
@@ -25,7 +25,7 @@
     "prepack": "ts-node ../../scripts/prepack.ts",
     "postpack": "ts-node ../../scripts/postpack.ts",
     "build:watch": "onchange 'src/**/*.ts' -- yarn build",
-    "start": "ts-node src/index.ts",
+    "start": "ENV=Azure ts-node src/index.ts",
     "test": "jest"
   },
   "bugs": {
@@ -59,6 +59,8 @@
   "dependencies": {
     "@azure/arm-consumption": "^8.0.0",
     "@azure/arm-resources-subscriptions": "^2.0.0",
+    "@azure/storage-blob": "^12.14.0",
+    "@azure/storage-queue": "^12.13.0",
     "@cloud-carbon-footprint/app": "1.2.2",
     "@cloud-carbon-footprint/common": "^1.11.0",
     "@cloud-carbon-footprint/core": "^0.17.3",
